Actual first commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- comment -->
+<!doctype html>
+
+<html lang="en-GB">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
+
+
+</head>
+
+<body>
+    <h1>Test Element</h1>
+    <p>Test Element</p>
+</body>
+</html>
